--- a/geo2-zomato/geo2.ipynb
+++ b/geo2-zomato/geo2.ipynb
@@ -9564,8 +9564,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 271,
    "id": "afbb5ffa-4fc3-481a-98b5-d80d017cd655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from this diagram we get best highest rated places in bangalore."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b888b33-80c2-4616-b1c4-45d53678e11b",
    "metadata": {},
    "outputs": [],
    "source": []
